# perspective-python

./: .bettercodehub.yml  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  canary.ipynb  requirements.txt  setup.py  setup.py.in
docs/: advanced.rst  api.rst  conf.py  conf.py.in  index.rst  installation.rst  quickstart.rst
examples/: arrow.ipynb  canary.ipynb  helpers.ipynb  pandas.ipynb  psp.ipynb  ws.ipynb
perspective/: __init__.py  _config.py  _layout.py  _schema.py  _type.py  _version.py  base.py  examples.py  helpers.py  helpers_py27.py  psp.py  sort.py  table.py  validate.py  view.py  web.py  widget.py
perspective/core/: __init__.py  _version.py  aggregate.py  base.py  filters.py  widget.py
perspective/core/data/: base.py  pa.py
perspective/data/: __init__.py  base.py  pa.py  pd.py
perspective/include/perspective/: aggspec.h  binding.h  binding.hpp  build_filter.h  chart_interfaces.h  column.h  config.h  date.h  filter.h  filter_utils.h  first.h  gnode.h  gnode_state.h  mask.h  numpy.h  pool.h  raii.h  raw_types.h  scalar.h  storage.h  table.h  update_task.h
perspective/src/: aggspec.cpp  binding.cpp  chart_interfaces.cpp  column.cpp  compat_impl_osx.cpp  config.cpp  context_iterators.cpp  date.cpp  filter.cpp  gnode.cpp  gnode_state.cpp  init.cpp  jit_context.cpp  main.cpp  mask.cpp  numpy.cpp  pool.cpp  raii.cpp  scalar.cpp  storage.cpp  storage_impl_linux.cpp  storage_impl_osx.cpp  table.cpp  update_task.cpp
perspective/tests/: test_binding.py  test_config.py  test_schema.py  test_table.py  test_typedetect.py  test_widget.py
perspective/tests/core/: test_all.py  test_schema.py  test_typedetect.py  test_widget.py
perspective/tests/core/data/: test_pd.py
perspective/tests/data/: test_pd.py
perspective/tests/psp/: test_typedetect.py
scripts/: deploy.py  deploy.sh
tests/: test_all.py  test_layout.py  test_schema.py
tests/psp/: test_psp.py  test_typedetect.py
